cdk.out/VpcStack.template.json
{
  "Resources": {
    "VpcStandardB3B9526E": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.16.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/Resource"
      }
    },
    "VpcStandardpublicSubnet1Subnet65900542": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.0.0/24",
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/Subnet"
      }
    },
    "VpcStandardpublicSubnet1RouteTable9F5AF121": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/RouteTable"
      }
    },
    "VpcStandardpublicSubnet1RouteTableAssociation7669FDDF": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardpublicSubnet1RouteTable9F5AF121"
        },
        "SubnetId": {
          "Ref": "VpcStandardpublicSubnet1Subnet65900542"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/RouteTableAssociation"
      }
    },
    "VpcStandardpublicSubnet1DefaultRoute52E212C1": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardpublicSubnet1RouteTable9F5AF121"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcStandardIGWDB693EAA"
        }
      },
      "DependsOn": [
        "VpcStandardVPCGWB9B62BE0"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/DefaultRoute"
      }
    },
    "VpcStandardpublicSubnet1EIP2999EF60": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/EIP"
      }
    },
    "VpcStandardpublicSubnet1NATGateway564B2D77": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcStandardpublicSubnet1EIP2999EF60",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VpcStandardpublicSubnet1Subnet65900542"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet1/NATGateway"
      }
    },
    "VpcStandardpublicSubnet2Subnet42CBD72F": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.1.0/24",
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/Subnet"
      }
    },
    "VpcStandardpublicSubnet2RouteTableD367FA3F": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/RouteTable"
      }
    },
    "VpcStandardpublicSubnet2RouteTableAssociation3662BF44": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardpublicSubnet2RouteTableD367FA3F"
        },
        "SubnetId": {
          "Ref": "VpcStandardpublicSubnet2Subnet42CBD72F"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/RouteTableAssociation"
      }
    },
    "VpcStandardpublicSubnet2DefaultRoute8B970526": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardpublicSubnet2RouteTableD367FA3F"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "VpcStandardIGWDB693EAA"
        }
      },
      "DependsOn": [
        "VpcStandardVPCGWB9B62BE0"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/DefaultRoute"
      }
    },
    "VpcStandardpublicSubnet2EIP93F31E94": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/EIP"
      }
    },
    "VpcStandardpublicSubnet2NATGateway6EC1566C": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "VpcStandardpublicSubnet2EIP93F31E94",
            "AllocationId"
          ]
        },
        "SubnetId": {
          "Ref": "VpcStandardpublicSubnet2Subnet42CBD72F"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/publicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/publicSubnet2/NATGateway"
      }
    },
    "VpcStandardprivateSubnet1Subnet94A66483": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.2.0/24",
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/privateSubnet1"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet1/Subnet"
      }
    },
    "VpcStandardprivateSubnet1RouteTable84D78A4C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/privateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet1/RouteTable"
      }
    },
    "VpcStandardprivateSubnet1RouteTableAssociation831FB396": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardprivateSubnet1RouteTable84D78A4C"
        },
        "SubnetId": {
          "Ref": "VpcStandardprivateSubnet1Subnet94A66483"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet1/RouteTableAssociation"
      }
    },
    "VpcStandardprivateSubnet1DefaultRoute55C8A667": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardprivateSubnet1RouteTable84D78A4C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcStandardpublicSubnet1NATGateway564B2D77"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet1/DefaultRoute"
      }
    },
    "VpcStandardprivateSubnet2Subnet6050B502": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "172.16.3.0/24",
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/privateSubnet2"
          },
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet2/Subnet"
      }
    },
    "VpcStandardprivateSubnet2RouteTable143AFB99": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard/privateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet2/RouteTable"
      }
    },
    "VpcStandardprivateSubnet2RouteTableAssociationD13F88B1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardprivateSubnet2RouteTable143AFB99"
        },
        "SubnetId": {
          "Ref": "VpcStandardprivateSubnet2Subnet6050B502"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet2/RouteTableAssociation"
      }
    },
    "VpcStandardprivateSubnet2DefaultRoute379F4F4F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "VpcStandardprivateSubnet2RouteTable143AFB99"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "VpcStandardpublicSubnet2NATGateway6EC1566C"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/privateSubnet2/DefaultRoute"
      }
    },
    "VpcStandardIGWDB693EAA": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/VpcStandard"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/IGW"
      }
    },
    "VpcStandardVPCGWB9B62BE0": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VpcStandardB3B9526E"
        },
        "InternetGatewayId": {
          "Ref": "VpcStandardIGWDB693EAA"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/VpcStandard/VPCGW"
      }
    }
  }
}
